# desaparecidos.uy

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  STATUS.md  Start desaparecidos.command  pyproject.toml
.github/workflows/: urucon-artifact.yml
benchmark/: PRODUCTION_TEST_TRANSCRIPT.txt  README.md  reported-results.json  reproduce.py  requirements.txt
data/: sources.json
data/manifests/: people.csv  places.csv  portrait-overrides.csv  targets.csv
data/persons/: disappeared.json  metadata-overrides.csv
doc/: AGENTS.md  Grant CU Proposal  STATUS.md  TODO-2.md  TODO.md  desaparecidos-uy-project-description.md  description desaparecidos.uy .txt  import-sitios-de-memoria.md  portrait-overrides.md  summer-publication-plan-2.md  summer-publication-plan.md
doc/writings/: AI & SOCIETY special collection.md  README.md  ai-society-open-forum-v2.md  ai-society-open-forum.md  ai-society-research-paper-draft.md  publishing-venues.md  source-quality-log.md  summer-publication-plan.md
frontend/: index.html  package-lock.json  package.json
scripts/: apply_person_metadata_overrides.py  apply_portrait_overrides.py  audit_target_corpus.py  build_targets_manifest.py  create_synthetic_fixtures.py  import_sitios_memoria.py  suggest_local_portrait_matches.py
tests/: test_api.py  test_cache.py  test_cli.py  test_crawl.py  test_cv.py  test_demo.py  test_geography.py  test_images.py  test_import_sitios.py  test_manifests.py  test_outputs.py  test_persons.py  test_pipeline.py  test_preprocess.py  test_suggest_local_portrait_matches.py  test_traversals.py
(+41 files in other folders)
