[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desaparecidos-uy"
version = "0.1.0"
description = "Local Stage 1 pipeline and GUI for the desaparecidos.uy computational memorial artwork."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tomas Laurenzo" }]
dependencies = [
  "fastapi>=0.115",
  "numpy>=1.26",
  "opencv-python-headless==4.12.0.88",
  "Pillow>=10.0",
  "requests>=2.31",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0"
]

[project.scripts]
desaparecidos = "desaparecidos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
